<resources>
    <string name="app_name">SingleStockWatchTest</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="retrieve">Retrieve Stock Quote</string>
    <string name="symbol">股票代號</string>
    <string name="company">公司</string>
    <string name="exchange">Exchange</string>
    <string name="volume">總量</string>
    <string name="last_trade">Last Trade</string>
    <string name="change">Change</string>
    <string name="perc_change">Percent Change</string>
    <string name="stock_chart">Stock Chart</string>
    <string name="retrieving">Retrieving&#8230;</string>

    <string name="open">開盤</string>
    <string name="l_cur">成交</string>
    <string name="cp">漲幅</string>
    <string name="high">最高</string>
    <string name="low">最低</string>
    <string name="c">漲跌</string>
    <string name="pcls">昨收</string>
    <string name="hi52">52週最高</string>
    <string name="lo52">52週最低</string>
    <string name="pe">earnings ratio</string>
    <string name="eps">earnings per share</string>
    <string name="shares">number of outstanding shares</string>
    <string name="mc">market capitalization of the stock</string>
    <string name="ccol">ccol</string>

</resources>
