<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"

    >

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:shrinkColumns="*"
        android:stretchColumns="*" >

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/edit_symbol"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:inputType="textCapCharacters"
                android:maxLength="5" />

            <Button
                android:id="@+id/bn_retrieve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:onClick="retrieveQuote"
                android:text="@string/retrieve" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_symbol"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/symbol" />

            <TextView
                android:id="@+id/tv_symbol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/company" />

            <TextView
                android:id="@+id/tv_company"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_exchange"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/exchange" />

            <TextView
                android:id="@+id/tv_exchange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_volume"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/volume" />

            <TextView
                android:id="@+id/tv_volume"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_last"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/last_trade" />

            <TextView
                android:id="@+id/tv_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_change"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/change" />

            <TextView
                android:id="@+id/tv_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <TextView
                android:id="@+id/lbl_perc_change"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:text="@string/perc_change" />

            <TextView
                android:id="@+id/tv_perc_change"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dip" >

            <ImageView
                android:id="@+id/img_chart"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_span="2"
                android:contentDescription="@string/stock_chart" />
        </TableRow>
    </TableLayout>

</LinearLayout>